added tcp connetion with Qalibrate server, MVP working

--- a/config/parameter_config.ini
+++ b/config/parameter_config.ini
@@ -12,7 +12,7 @@ probetime = 200.880000
 [state_det_pmt]
 t1 = 2
 t2 = 17
-errm1 = [[0.968, 0.031999999999999994], [0.04133333333333333, 0.9586666666666666]]
+errm1 = [[0.975, 0.025], [0.028999999999999998, 0.971]]
 errm2 = [[0.972, 0.028000000000000004, 0.0], [0.031, 0.9140000000000001, 0.05500000000000001], [0.001, 0.198, 0.801]]
 
 [state_det_camera]
@@ -24,7 +24,7 @@ errm2 = [[0.995, 0.005], [0.023, 0.9770000000000001]]
 [ion_1]
 clock1freq = 100015.636
 clock1amp = 35
-clock1time = 685.04
+clock1time = 676.84
 plus1freq = 110002.518
 plus1amp = 16.00
 plus1time = 63.08
@@ -35,7 +35,7 @@ dressingP1amp = 66.90
 dressingP1time = 15.77
 dressingM1amp = 86.40
 dressingM1time = 15.66
-D1freq =  9986.748
+D1freq =  9986.738
 D1amp = 2.00
 D1time = 948.49
 rf1freq = 9551.1
@@ -87,7 +87,7 @@ Dstime = 800.000000
 
 [sb_cooling]
 comfreq = 220.904
-strfreq = 382.729
+strfreq = 382.679
 eta = 0.00536
 nbar = 55
 pluscar1amp = 150
@@ -100,10 +100,10 @@ plusblue1amp = 80
 plusblue1time = 668
 Dcar1amp = 20
 Dcar1time = 9.95
-Dred1freq = 9603.615
+Dred1freq = 9603.969
 Dred1amp = 70
 Dred1time = 4892
-Dblue1freq =  10369.917
+Dblue1freq =  10369.417
 Dblue1amp = 70
 Dblue1time = 4892
 
@@ -164,7 +164,7 @@ dressingM2amp_gate = 41.68
 [msgate]
 freqmode = "STR"
 comfreq = 220.904
-strfreq = 383.151
+strfreq = 382.679
 OmRF = 56.569
 pstime = 20
 msloops = 1
@@ -192,16 +192,16 @@ Dphase2time = 910.8
 Dphase2amp = 2.0
 dressingP1amp = 72.011
 dressingP1time = 15.77
-dressingM1amp = 92.04
+dressingM1amp = 93.54
 dressingM1time = 15.66
 dressingP2amp = 63.9
 dressingP2time = 17.48
 dressingM2amp = 83.14
 dressingM2time = 17.68
-red1amp = 154.356
-red1time = 6.13
-blue1amp = 153.99
-blue1time = 6.18
+red1amp = 153.54
+red1time = 6.16
+blue1amp = 154.37
+blue1time = 6.16
 red2amp = 143.53
 red2time = 6.49
 blue2amp = 143.53
