Changed qalibration experiments runs, signalling main script instead of meta

--- a/config/parameter_config.ini
+++ b/config/parameter_config.ini
@@ -12,7 +12,7 @@ probetime = 200.880000
 [state_det_pmt]
 t1 = 2
 t2 = 17
-errm1 = [[0.975, 0.025], [0.028999999999999998, 0.971]]
+errm1 = [[0.977, 0.023], [0.023, 0.977]]
 errm2 = [[0.972, 0.028000000000000004, 0.0], [0.031, 0.9140000000000001, 0.05500000000000001], [0.001, 0.198, 0.801]]
 
 [state_det_camera]
@@ -24,7 +24,7 @@ errm2 = [[0.995, 0.005], [0.023, 0.9770000000000001]]
 [ion_1]
 clock1freq = 100015.636
 clock1amp = 35
-clock1time = 676.84
+clock1time = 667.34
 plus1freq = 110002.518
 plus1amp = 16.00
 plus1time = 63.08
@@ -35,7 +35,7 @@ dressingP1amp = 66.90
 dressingP1time = 15.77
 dressingM1amp = 86.40
 dressingM1time = 15.66
-D1freq =  9986.738
+D1freq =  9986.758
 D1amp = 2.00
 D1time = 948.49
 rf1freq = 9551.1
@@ -192,7 +192,7 @@ Dphase2time = 910.8
 Dphase2amp = 2.0
 dressingP1amp = 72.011
 dressingP1time = 15.77
-dressingM1amp = 93.54
+dressingM1amp = 94.04
 dressingM1time = 15.66
 dressingP2amp = 63.9
 dressingP2time = 17.48
